--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,6 +15,7 @@
     "web3modal": "^1.9.5"
   },
   "scripts": {
+    "predeply": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
